// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default iframe 1`] = `
<iframe
  allowFullScreen="allowFullScreen"
  src="http://www.foobar.com"
  style={
    Object {
      "display": "initial",
      "position": "relative",
    }
  }
/>
`;

exports[`Render iframe with title 1`] = `
<iframe
  allow="encrypted-media"
  allowFullScreen="allowFullScreen"
  aria-hidden={true}
  aria-label="someLabel"
  aria-labelledby="someId"
  className="myIframeClass"
  id="myIframeId"
  loading="eager"
  name="My Iframe name"
  onLoad={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  sandbox="a l l o w - s c r i p t s"
  scrolling="yes"
  src="http://www.foo.com"
  style={
    Object {
      "background": "red",
      "border": 0,
      "display": "block",
      "overflow": "auto",
      "position": "relative",
    }
  }
  target="_self"
  title="A foobared iframe"
/>
`;

exports[`Render with allow attribute 1`] = `
<iframe
  allow="fullscreen autoplay"
  allowFullScreen="allowFullScreen"
  src="http://www.foobar.com"
  style={
    Object {
      "border": 1,
      "display": "initial",
    }
  }
/>
`;

exports[`Render with allowFullScreen bool 1`] = `
<iframe
  allow="fullscreen"
  allowFullScreen="allowFullScreen"
  src="http://www.foobar.com"
  style={
    Object {
      "border": 1,
      "display": "initial",
    }
  }
/>
`;
